infra-partie-1/console.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. Tous droits réservés.

Installez la dernière version de PowerShell pour de nouvelles fonctionnalités et améliorations ! https://aka.ms/PSWindows

PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker compose up -d
validating C:\Users\simon\Documents\InfraJulienTP\infra-partie-1\docker-compose.yml: services.mongo.ports must be a list
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker images .
REPOSITORY   TAG       IMAGE ID   CREATED   SIZE
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker images
REPOSITORY                TAG       IMAGE ID       CREATED         SIZE
backend-coconut-api-api   latest    0b03826194c4   7 months ago    1.07GB
coconut-mobile            latest    5ea02ffd1fe1   7 months ago    1.91GB
coconut-web               latest    a4d90b1d6f04   7 months ago    557MB
mariadb                   10.11     34adebbac117   7 months ago    455MB
phpmyadmin/phpmyadmin     latest    95e01f723b5e   11 months ago   814MB
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker build -t mongo .
[+] Building 0.1s (1/1) FINISHED                                                                   docker:desktop-linux
 => [internal] load build definition from Dockerfile                                                               0.0s
 => => transferring dockerfile: 2B                                                                                 0.0s
ERROR: failed to solve: failed to read dockerfile: open Dockerfile: no such file or directory

View build details: docker-desktop://dashboard/build/desktop-linux/desktop-linux/um2wke2vq37h5jd7s3cc7c8vr
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker compose up -d
validating C:\Users\simon\Documents\InfraJulienTP\infra-partie-1\docker-compose.yml: services.mongo.volumes must be a list
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker compose up -d
time="2026-01-12T11:41:20+01:00" level=warning msg="C:\\Users\\simon\\Documents\\InfraJulienTP\\infra-partie-1\\docker-compose.yml: the attribute `version` is obsolete, it will be ignored, please remove it to avoid potential confusion"
[+] Running 9/9
 ✔ mongo Pulled                                                                   21.8s
   ✔ a4c2e1a296a6 Pull complete                                                    0.5s
   ✔ 47c219b2d4f5 Pull complete                                                    0.6s
   ✔ 929ce23bedbe Pull complete                                                    0.6s
   ✔ d0fc8d2469ec Pull complete                                                    0.9s
   ✔ d7381d7512ed Pull complete                                                   19.9s
   ✔ 7e49dc6156b0 Pull complete                                                    3.8s
   ✔ 487128c0e848 Pull complete                                                    0.6s
   ✔ a4867e714827 Pull complete                                                    3.9s
[+] Running 2/2
 ✔ Network infra-partie-1_default  Created                                         0.0s
 ✔ Container mongo                 Started                                         0.6s
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker exec -it mongo mongosh -u root -p example
Current Mongosh Log ID: 6964d0809e73c84a4f8de665
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
MongoServerError: Authentication failed.
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker exec -it mongo mongosh -u root -p 123
Current Mongosh Log ID: 6964d08d0197042a788de665
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
Using MongoDB:          7.0.28
Using Mongosh:          2.5.10

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

------
   The server generated these startup warnings when booting
   2026-01-12T10:42:20.829+00:00: vm.max_map_count is too low
------

test> use myapp
switched to db myapp
myapp> db.createCollection("users")
{ ok: 1 }
myapp> db.users.insetOne({ name : "Alice" })
TypeError: db.users.insetOne is not a function
myapp> db.users.insertOne({ name : "Alice" })
{
  acknowledged: true,
  insertedId: ObjectId('6964d1d30197042a788de666')
}
myapp> show dbs
admin   100.00 KiB
config   60.00 KiB
local    72.00 KiB
myapp     8.00 KiB
myapp> show collections
users
myapp> mongodb://root:123@localhost:27017/admin
...
...
...
...
... 123
123
myapp> mongodb: /*root:123@localhost:27017/admin*/ 123
123
myapp> mongodb:root:123@localhost:27017/admin 123
Uncaught:
SyntaxError: Missing semicolon. (1:16)

> 1 | mongodb:root:123@localhost:27017/admin 123
    |                 ^
  2 |

myapp> mongodb://root:123@localhost:27017/admin 123
...
...
...
...
...
...
...
... 0
*0
myapp> docker ps
Uncaught:
SyntaxError: Missing semicolon. (1:6)

> 1 | docker ps
    |       ^
  2 |

myapp>
(To exit, press Ctrl+C again or Ctrl+D or type .exit)
myapp>
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker ps
CONTAINER ID   IMAGE     COMMAND                  CREATED          STATUS          PORTS                      NAMES
6b98eac518d1   mongo:7   "docker-entrypoint.s…"   20 minutes ago   Up 20 minutes   0.0.0.0:27017->27017/tcp   mongo
PS C:\Users\simon\Documents\InfraJulienTP\infra-partie-1> docker exec -it mongo mongosh -u root -p 123
Current Mongosh Log ID: 6964d4e19dd3290bd98de665
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
Using MongoDB:          7.0.28
Using Mongosh:          2.5.10

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-01-12T10:42:20.829+00:00: vm.max_map_count is too low
------

test> use myapp
switched to db myapp
myapp> use test
switched to db test
test>